--- a/lecture 8/Lecture_8_Cros_val.ipynb
+++ b/lecture 8/Lecture_8_Cros_val.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "11b5c378",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aml",
+   "display_name": "ml_fixed",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
