--- a/lecture 6/Exercise_L6_LG.ipynb
+++ b/lecture 6/Exercise_L6_LG.ipynb
@@ -25,13 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+      "0            6      148             72             35        0  33.6   \n",
+      "1            1       85             66             29        0  26.6   \n",
+      "2            8      183             64              0        0  23.3   \n",
+      "3            1       89             66             23       94  28.1   \n",
+      "4            0      137             40             35      168  43.1   \n",
+      "\n",
+      "   DiabetesPedigreeFunction  Age  Outcome  \n",
+      "0                     0.627   50        1  \n",
+      "1                     0.351   31        0  \n",
+      "2                     0.672   32        1  \n",
+      "3                     0.167   21        0  \n",
+      "4                     2.288   33        1  \n",
       "Pregnancies                 0\n",
       "Glucose                     0\n",
       "BloodPressure               0\n",
@@ -61,7 +74,7 @@
     "df = pd.read_csv(url, names=column_names)\n",
     "\n",
     "# Display the first few rows and basic information about the dataset\n",
-    "#print(df.head())\n",
+    "print(df.head())\n",
     "#print(df.info())\n",
     "print(df.isnull().sum())\n",
     "df=df.dropna()\n"
@@ -81,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
